2007-11-19  Matthieu Nottale  <nottale@gostai.com>

	Implement urbi-level ping.
	* NEWS: Update.
	* include/urbi/uabstractclient.hh: Declare setPingInterval().
	* include/urbi/uclient.hh: Declare extra variables to handle pings.
	* src/examples/urbisend.cc: Use the new feature to quit on disconnection.
	* src/liburbi/uclient.cc: Send pings and monitor response in
	  listenThread().

2007-11-13  Matthieu Nottale  <nottale@gostai.com>

	Fix segfault when bogus uobject message is received.
	* src/liburbi/uobject.cc: Check result of hash->find() before use.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Stop using FD3.
	* tests/liburbi-check.as: Actually this is useless, it makes
	sense for uconsole because it is run by uconsole-check, but here,
	it makes no sense and makes everything more complex.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Fix FD 3 usage.
	* tests/liburbi-check.as: Build it before using it.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Fixes.
	* tests/Makefile.am: Fix dist/clean thingies.
	* tests/liburbi-check.as: Build FD 3 after having moved in the
	test's dir.
	(find_urbi_server): path_sep no longer exists.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	nodist_.
	* tests/Makefile.am: liburbi-check is nodist_.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Use children.as.
	* tests/liburbi-check.as: Here.
	Construct FD 3 before using it.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Use M4sh's stderr.
	* tests/liburbi-check.as (fatal): Remove.
	(harvest_children): Use ex_to_string.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Use instrument.as.
	* tests/liburbi-check.as (expect, instrument): Remove.
	Adjust.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Use rst.as.
	* tests/liburbi-check.as (pre, subsection, tab): Remove.
	Adjust to using their rst_* counterparts.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Use M4sh for liburbi-check.
	* tests/liburbi-check: Rename as...